refactor(Header): Refactor the project structure

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,19 @@
 .blob-3 {
     border-radius: 31% 69% 44% 56% / 34% 9% 91% 66% ;
 }
+
+.hamburger-line{
+    @apply w-[30px] h-[2px] my-2 block bg-slate-800 transition duration-300 ease-in-out;
+}
+
+#hamburger-active > span:nth-child(1) {
+    @apply rotate-45;
+}
+
+#hamburger-active > span:nth-child(2) {
+    @apply scale-0;
+}
+
+#hamburger-active > span:nth-child(3) {
+    @apply -rotate-45;
+}
